Make sure no blank messages are chosen with Util.randomSmash, also update Util.java to use List.getFirst instead of List.get(0)