@@ -17,7 +17,7 @@ public class Util {
         if (message.getMessageReference() != null &&
                 message.getMessageReference().getType() == MessageReference.MessageReferenceType.FORWARD
         ) {
-            return message.getMessageSnapshots().get(0).getContentRaw();
+            return message.getMessageSnapshots().getFirst().getContentRaw();
         }
         else {
             return message.getContentRaw();
@@ -27,19 +27,19 @@ public class Util {
     public static Message.Attachment getMessageContentImage(Message message){
         if (message.getMessageReference() != null && // The message has a message reference
                 message.getMessageReference().getType() == MessageReference.MessageReferenceType.FORWARD && // Forwarded Message
-                !message.getMessageSnapshots().get(0).getAttachments().isEmpty()
+                !message.getMessageSnapshots().getFirst().getAttachments().isEmpty()
         ) {
-            return message.getMessageSnapshots().get(0).getAttachments().get(0);
+            return message.getMessageSnapshots().getFirst().getAttachments().getFirst();
         }
         else {
-            return message.getAttachments().get(0);
+            return message.getAttachments().getFirst();
         }
     }
 
     // get message content raw, including forwarded messages
     public static String getMessageContentSanitized(Message message){
         if (message.getMessageReference() != null && message.getMessageReference().getType() == MessageReference.MessageReferenceType.FORWARD) {
-            return MarkdownSanitizer.sanitize(message.getMessageSnapshots().get(0).getContentRaw());
+            return MarkdownSanitizer.sanitize(message.getMessageSnapshots().getFirst().getContentRaw());
         } else {
             return MarkdownSanitizer.sanitize(message.getContentRaw());
         }
@@ -48,58 +48,11 @@ public class Util {
     // return a random keyboard smash
     public static Message randomSmash() {
         List<Message> filtered = Main.smashesCache.getMessages()
-                .stream().filter((Message message) -> !message.getContentRaw().contains("//")).toList();
+                .stream().filter((Message message) -> !message.getContentRaw().contains("//") && !message.getContentRaw().isBlank()).toList();
         return filtered.get(new Random().nextInt(filtered.size()));
     }
 
-    /**
-     * A Quote is a message that meets the definition of a Text Quote, Image Quote,
-     * Forwarded Text Quote, or Forwarded Image Quote.
-     * @param m The Message to test.
-     * @return Whether `m` is a quote.
-     */
-    public static boolean isQuote(Message m) {
-        return isTextQuote(m) || isImageQuote(m) || isForwardedTextQuote(m) || isForwardedImageQuote(m);
-    }
 
-    /**
-     * A Text Quote is a message that contains `"`, `“`, or `”`, or starts with `>`.
-     * @param m The Message to test.
-     * @return Whether `m` is a quote
-     */
-    public static boolean isTextQuote(Message m) {
-        // If the message is blank, this is not a text quote
-        if (m.getContentRaw().isBlank()) return false;
-
-        // Normal test case for text quotes
-        return m.getContentRaw().contains("\"") || // straight quotes
-                m.getContentRaw().contains("“") || // curly starting quote
-                m.getContentRaw().contains("”") || // curly ending quote
-                m.getContentRaw().startsWith(">")|| // markdown quotes syntax
-                m.getAuthor().getIdLong() == 555955826880413696L; // epic rpg because its funnie
-    }
-
-    /**
-     * An Image Quote is a message that contains exactly one image attachment
-     * @param m The Message to test.
-     * @return Whether `m` is an Image Quote
-     */
-    public static boolean isImageQuote(Message m) {
-        return m.getAttachments().size() == 1;
-    }
-
-
-    public static boolean isForwardedTextQuote(Message m) {
-        return m.getMessageReference() != null && // The message has a message reference
-                m.getMessageReference().getType() == MessageReference.MessageReferenceType.FORWARD &&
-                !m.getMessageSnapshots().get(0).getContentRaw().isBlank();
-    }
-
-    public static boolean isForwardedImageQuote(Message m) {
-        return m.getMessageReference() != null && // The message has a message reference
-                m.getMessageReference().getType() == MessageReference.MessageReferenceType.FORWARD &&
-                m.getMessageSnapshots().get(0).getAttachments().size() == 1;
-    }
 
     // Utility method to get the API key from the file present in the same directory
     public static String getApiKey() throws FileNotFoundException {
